Fixed broken links
Updated the links to the Stephane Maldini's "grails-events-push" and grails spring integration (events-si) github pages.

--- a/guide/events.html
+++ b/guide/events.html
@@ -153,7 +153,7 @@ and get maximum flexibility when required :
 <li><strong class="bold">@Listener</strong> annotations for your <strong class="bold">Services</strong> methods.</li>
 <li>Events mapping <strong class="bold">DSL artifact</strong> to select and control events topics</li>
 <li><strong class="bold">Spring beans</strong> with access to underlying API</li>
-<li><strong class="bold">More cool stuff</strong> with <a href="../ref/Httpsgithubcomsmaldinigrailseventssi/Events Spring Integration.html" class="https://github.com/smaldini/grails-events-si">Events Spring Integration</a> and <a href="../ref/Httpsgithubcomsmaldinigrailseventspush/Events Push.html" class="https://github.com/smaldini/grails-events-push">Events Push</a></li>
+<li><strong class="bold">More cool stuff</strong> with <a href="https://github.com/smaldini/grails-events-si" class="https://github.com/smaldini/grails-events-si">Events Spring Integration</a> and <a href="https://github.com/smaldini/grails-events-push" class="https://github.com/smaldini/grails-events-push">Events Push</a></li>
 <li>Simple <strong class="bold">config keys</strong></li>
 </ul><p class="paragraph"/>In a nutshell, you will :
 <ul class="star">
